# CUDA-Reinforcement-Learning-AI

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/benchmarks/: cartpole_a2c.yaml  cartpole_dqn.yaml  cartpole_ppo.yaml  formal_a2c_cartpole.yaml  formal_dqn_cartpole.yaml  formal_gae.yaml  formal_ppo_loss.yaml  formal_replay_buffer.yaml  gae_microbenchmark.yaml  ppo_microbenchmark.yaml  replay_buffer_benchmark.yaml
configs/experiments/: cartpole_a2c.json  cartpole_dqn.yaml  cartpole_reinforce.json
cuda/: reinforcement_learning.py
cuda/include/: cuda_check.cuh  gae.cuh
cuda/src/: cuda_check.cu  gae.cu  main.cu
docs/: algorithm-maturity.md  architecture.md  benchmark-methodology.md  benchmark-results.md  cuda-kernel-validation.md  diagnostic.md  engineering-playbook.md  experiment-lifecycle.md  experiment-methodology.md  reproducibility.md  roadmap.md  telemetry.md
docs/adrs/: 0001-local-jsonl-document-store.md  0002-transitional-training-facade.md  0003-benchmark-harness.md
scripts/: check_cuda.py  cuda_rl_cli.py  run_benchmark_campaign.py  run_benchmarks.py  train_rl.py
src/cuda_rl/: __init__.py  cli.py  reinforcement_learning.py
src/cuda_rl/agents/: __init__.py
src/cuda_rl/algorithms/: __init__.py  gae.py  gae_reference.py  ppo.py
src/cuda_rl/benchmarks/: __init__.py  aggregation.py  campaign.py  config.py  formal.py  hardware.py  harness.py  microbenchmarks.py  reporting.py  runner.py  schemas.py  statistics.py
src/cuda_rl/config/: __init__.py  experiment.py
src/cuda_rl/environments/: __init__.py
src/cuda_rl/evaluation/: __init__.py
src/cuda_rl/experiments/: __init__.py  registry.py
src/cuda_rl/metrics/: __init__.py  aggregates.py
src/cuda_rl/models/: __init__.py  mlp.py
src/cuda_rl/monitoring/: __init__.py  telemetry.py
src/cuda_rl/native/: __init__.py  gae.py
src/cuda_rl/replay/: __init__.py  buffers.py
src/cuda_rl/reports/: __init__.py  training.py
src/cuda_rl/storage/: __init__.py  document_store.py
src/cuda_rl/utils/: __init__.py  device.py
tests/: test_algorithms.py  test_benchmark_platform.py  test_benchmarks.py  test_cli.py  test_config.py  test_device.py  test_document_store.py  test_experiment_registry.py  test_gae_contract.py  test_metrics.py  test_models.py  test_replay.py  test_training_report.py
(+3 files in other folders)
