[project]
name = "cuda-reinforcement-learning-ai"
version = "0.1.0"
description = "CUDA-accelerated reinforcement learning laboratory with native CUDA kernels, PyTorch agents, reproducible benchmarks, GPU telemetry, and documented experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "nvidia-ml-py>=13.610.43",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scipy>=1.18.0",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]

[project.scripts]
cuda-rl = "cuda_rl.cli:main"
cuda-rl-train = "cuda_rl.reinforcement_learning:main"

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
files = ["src", "scripts"]
